# django-app

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: log.txt
mysite/BlogApp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/BlogApp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py  0003_remove_article_author_remove_article_category_and_more.py
mysite/BlogApp/templates/blogapp/: article_detail.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  (+3 more)
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixtures.json  products-fixture.json  users-fixtures.json
mysite/shopapp/migrations/: 0007_alter_product_options_product_amount.py  0008_remove_product_amount_product_created_by.py  0009_alter_product_created_by.py  0010_merge_20241006_1523.py  0011_alter_product_created_by.py  0012_order_receipt.py  0013_product_preview.py  0014_productimage.py  0015_alter_order_options_alter_product_options.py  0016_alter_product_description_alter_product_name.py
(+22 files in other folders)
