[project]
name = "django-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Shcherbakov",email = "le_danseur@mail.ru"}
]

requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-filter (>=24.3,<25.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false